-- CrewLution PostgreSQL DDL
-- Domain schema for accounts, crm, and commerce apps.
--
-- Source: Django models and migrations (as of 2026-06-08).
-- Related: docs/schema.dbml, docs/database-schema.md
--
-- Notes:
--   * Django uses BIGINT identity PKs (BigAutoField).
--   * auth_user is included because domain tables reference it.
--     Full Django install also creates auth_group, django_session, etc. via migrate.
--   * Human-readable references (QT-00001, JB-00001, INV-00001) are computed in
--     application code from per-company sequence columns.
--   * line_item.amount is computed as quantity * unit_price (not stored).

BEGIN;

-- ─── Django auth (subset) ─────────────────────────────────────────────────────

CREATE TABLE auth_user (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    password        VARCHAR(128) NOT NULL,
    last_login      TIMESTAMPTZ,
    is_superuser    BOOLEAN NOT NULL DEFAULT FALSE,
    username        VARCHAR(150) NOT NULL,
    first_name      VARCHAR(150) NOT NULL DEFAULT '',
    last_name       VARCHAR(150) NOT NULL DEFAULT '',
    email           VARCHAR(254) NOT NULL DEFAULT '',
    is_staff        BOOLEAN NOT NULL DEFAULT FALSE,
    is_active       BOOLEAN NOT NULL DEFAULT TRUE,
    date_joined     TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT auth_user_username_key UNIQUE (username)
);

COMMENT ON TABLE auth_user IS 'Django built-in user model (subset for FK references).';

-- ─── accounts ─────────────────────────────────────────────────────────────────

CREATE TABLE accounts_company (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at          TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at          TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    name                VARCHAR(200) NOT NULL,
    phone               VARCHAR(50) NOT NULL DEFAULT '',
    website             VARCHAR(200) NOT NULL DEFAULT '',
    email               VARCHAR(254) NOT NULL DEFAULT '',
    address1            VARCHAR(200) NOT NULL DEFAULT '',
    address2            VARCHAR(200) NOT NULL DEFAULT '',
    city                VARCHAR(120) NOT NULL DEFAULT '',
    state               VARCHAR(120) NOT NULL DEFAULT '',
    postal_code         VARCHAR(40) NOT NULL DEFAULT '',
    business_hours      JSONB NOT NULL DEFAULT '{}'::jsonb,
    show_business_hours BOOLEAN NOT NULL DEFAULT FALSE,
    is_active           BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE INDEX accounts_company_created_at_idx ON accounts_company (created_at);
CREATE INDEX accounts_company_updated_at_idx ON accounts_company (updated_at);
CREATE INDEX accounts_company_name_idx ON accounts_company (name);
CREATE INDEX accounts_company_is_active_idx ON accounts_company (is_active);

COMMENT ON TABLE accounts_company IS 'Tenant root entity.';

CREATE TABLE accounts_companymembership (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id  BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    user_id     BIGINT NOT NULL REFERENCES auth_user (id) ON DELETE CASCADE,
    role        VARCHAR(20) NOT NULL DEFAULT 'tech',
    is_active   BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT uniq_membership_company_user UNIQUE (company_id, user_id),
    CONSTRAINT accounts_companymembership_role_check CHECK (
        role IN ('owner', 'admin', 'dispatcher', 'tech', 'viewer')
    )
);

CREATE INDEX accounts_companymembership_created_at_idx
    ON accounts_companymembership (created_at);
CREATE INDEX accounts_companymembership_updated_at_idx
    ON accounts_companymembership (updated_at);
CREATE INDEX accounts_companymembership_role_idx
    ON accounts_companymembership (role);
CREATE INDEX accounts_companymembership_is_active_idx
    ON accounts_companymembership (is_active);
CREATE INDEX accounts_co_user_id_d7b3af_idx
    ON accounts_companymembership (user_id, is_active);
CREATE INDEX accounts_co_company_b24194_idx
    ON accounts_companymembership (company_id, is_active);

CREATE TABLE accounts_companyinvite (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at    TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at    TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id    BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    token_hash    VARCHAR(64) NOT NULL,
    role          VARCHAR(20) NOT NULL,
    created_by_id BIGINT REFERENCES auth_user (id) ON DELETE SET NULL,
    expires_at    TIMESTAMPTZ NOT NULL,
    used_at       TIMESTAMPTZ,
    used_by_id    BIGINT REFERENCES auth_user (id) ON DELETE SET NULL,
    revoked_at    TIMESTAMPTZ,
    CONSTRAINT accounts_companyinvite_token_hash_key UNIQUE (token_hash),
    CONSTRAINT accounts_companyinvite_role_check CHECK (
        role IN ('owner', 'admin', 'dispatcher', 'tech', 'viewer')
    )
);

CREATE INDEX accounts_companyinvite_created_at_idx ON accounts_companyinvite (created_at);
CREATE INDEX accounts_companyinvite_updated_at_idx ON accounts_companyinvite (updated_at);
CREATE INDEX accounts_companyinvite_token_hash_idx ON accounts_companyinvite (token_hash);
CREATE INDEX accounts_companyinvite_role_idx ON accounts_companyinvite (role);
CREATE INDEX accounts_companyinvite_expires_at_idx ON accounts_companyinvite (expires_at);
CREATE INDEX accounts_companyinvite_used_at_idx ON accounts_companyinvite (used_at);
CREATE INDEX accounts_companyinvite_revoked_at_idx ON accounts_companyinvite (revoked_at);
CREATE INDEX accounts_co_company_4dfe68_idx ON accounts_companyinvite (company_id, created_at);

COMMENT ON TABLE accounts_companyinvite IS 'Single-use team invite; raw token never stored (SHA-256 hash only).';

CREATE TABLE accounts_customerportallink (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at       TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at       TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id       BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    customer_id      BIGINT NOT NULL,  -- FK added after crm_customer
    token_hash       VARCHAR(64) NOT NULL,
    created_by_id    BIGINT REFERENCES auth_user (id) ON DELETE SET NULL,
    revoked_at       TIMESTAMPTZ,
    last_accessed_at TIMESTAMPTZ,
    CONSTRAINT accounts_customerportallink_token_hash_key UNIQUE (token_hash)
);

CREATE INDEX accounts_customerportallink_created_at_idx
    ON accounts_customerportallink (created_at);
CREATE INDEX accounts_customerportallink_updated_at_idx
    ON accounts_customerportallink (updated_at);
CREATE INDEX accounts_customerportallink_token_hash_idx
    ON accounts_customerportallink (token_hash);
CREATE INDEX accounts_customerportallink_revoked_at_idx
    ON accounts_customerportallink (revoked_at);

COMMENT ON TABLE accounts_customerportallink IS 'Magic link for read-only client portal.';

-- ─── crm ──────────────────────────────────────────────────────────────────────

CREATE TABLE crm_customer (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at   TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at   TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id   BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    kind         VARCHAR(16) NOT NULL DEFAULT 'person',
    display_name VARCHAR(200) NOT NULL,
    company_name VARCHAR(200) NOT NULL DEFAULT '',
    email        VARCHAR(254) NOT NULL DEFAULT '',
    phone        VARCHAR(50) NOT NULL DEFAULT '',
    is_active    BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT crm_customer_kind_check CHECK (kind IN ('person', 'company'))
);

CREATE INDEX crm_customer_created_at_idx ON crm_customer (created_at);
CREATE INDEX crm_customer_updated_at_idx ON crm_customer (updated_at);
CREATE INDEX crm_customer_display_name_idx ON crm_customer (display_name);
CREATE INDEX crm_customer_is_active_idx ON crm_customer (is_active);
CREATE INDEX crm_customer_company_id_idx ON crm_customer (company_id);

ALTER TABLE accounts_customerportallink
    ADD CONSTRAINT accounts_customerportallink_customer_id_fkey
    FOREIGN KEY (customer_id) REFERENCES crm_customer (id) ON DELETE CASCADE;

CREATE INDEX accounts_cu_company_8a1f2d_idx
    ON accounts_customerportallink (company_id, customer_id);

CREATE TABLE crm_location (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id  BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    customer_id BIGINT NOT NULL REFERENCES crm_customer (id) ON DELETE CASCADE,
    label       VARCHAR(120) NOT NULL DEFAULT '',
    address1    VARCHAR(200) NOT NULL DEFAULT '',
    address2    VARCHAR(200) NOT NULL DEFAULT '',
    city        VARCHAR(120) NOT NULL DEFAULT '',
    state       VARCHAR(120) NOT NULL DEFAULT '',
    postal_code VARCHAR(40) NOT NULL DEFAULT '',
    country     VARCHAR(120) NOT NULL DEFAULT '',
    is_primary  BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE INDEX crm_location_created_at_idx ON crm_location (created_at);
CREATE INDEX crm_location_updated_at_idx ON crm_location (updated_at);
CREATE INDEX crm_location_is_primary_idx ON crm_location (is_primary);
CREATE INDEX crm_locatio_company_0512c1_idx
    ON crm_location (company_id, customer_id, is_primary);

CREATE TABLE crm_contact (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id  BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    customer_id BIGINT NOT NULL REFERENCES crm_customer (id) ON DELETE CASCADE,
    first_name  VARCHAR(120) NOT NULL DEFAULT '',
    last_name   VARCHAR(120) NOT NULL DEFAULT '',
    email       VARCHAR(254) NOT NULL DEFAULT '',
    phone       VARCHAR(50) NOT NULL DEFAULT '',
    title       VARCHAR(120) NOT NULL DEFAULT '',
    is_primary  BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE INDEX crm_contact_created_at_idx ON crm_contact (created_at);
CREATE INDEX crm_contact_updated_at_idx ON crm_contact (updated_at);
CREATE INDEX crm_contact_is_primary_idx ON crm_contact (is_primary);
CREATE INDEX crm_contact_company_3f9e60_idx
    ON crm_contact (company_id, customer_id, is_primary);

CREATE TABLE crm_customernote (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at   TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at   TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id   BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    customer_id  BIGINT NOT NULL REFERENCES crm_customer (id) ON DELETE CASCADE,
    created_by_id BIGINT REFERENCES auth_user (id) ON DELETE SET NULL,
    body         TEXT NOT NULL
);

CREATE INDEX crm_customernote_created_at_idx ON crm_customernote (created_at);
CREATE INDEX crm_customernote_updated_at_idx ON crm_customernote (updated_at);

CREATE TABLE crm_activityevent (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id  BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    customer_id BIGINT NOT NULL REFERENCES crm_customer (id) ON DELETE CASCADE,
    actor_id    BIGINT REFERENCES auth_user (id) ON DELETE SET NULL,
    verb        VARCHAR(64) NOT NULL,
    message     VARCHAR(300) NOT NULL DEFAULT '',
    CONSTRAINT crm_activityevent_verb_check CHECK (
        verb IN (
            'created_customer', 'updated_customer', 'added_note',
            'created_contact', 'updated_contact',
            'created_location', 'updated_location'
        )
    )
);

CREATE INDEX crm_activityevent_created_at_idx ON crm_activityevent (created_at);
CREATE INDEX crm_activityevent_updated_at_idx ON crm_activityevent (updated_at);
CREATE INDEX crm_activityevent_verb_idx ON crm_activityevent (verb);
CREATE INDEX crm_activit_company_fdfee4_idx
    ON crm_activityevent (company_id, customer_id, created_at DESC);

-- ─── commerce ─────────────────────────────────────────────────────────────────

CREATE TABLE commerce_quote (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id  BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    customer_id BIGINT NOT NULL REFERENCES crm_customer (id) ON DELETE CASCADE,
    sequence    INTEGER NOT NULL DEFAULT 0,
    title       VARCHAR(200) NOT NULL DEFAULT '',
    status      VARCHAR(20) NOT NULL DEFAULT 'draft',
    total       NUMERIC(12, 2) NOT NULL DEFAULT 0.00,
    currency    VARCHAR(3) NOT NULL DEFAULT 'USD',
    accepted_at TIMESTAMPTZ,
    CONSTRAINT uniq_quote_company_sequence UNIQUE (company_id, sequence),
    CONSTRAINT commerce_quote_status_check CHECK (
        status IN ('draft', 'sent', 'accepted', 'declined', 'expired')
    ),
    CONSTRAINT commerce_quote_total_check CHECK (total >= 0)
);

CREATE INDEX commerce_quote_created_at_idx ON commerce_quote (created_at);
CREATE INDEX commerce_quote_updated_at_idx ON commerce_quote (updated_at);
CREATE INDEX commerce_quote_sequence_idx ON commerce_quote (sequence);
CREATE INDEX commerce_quote_status_idx ON commerce_quote (status);
CREATE INDEX commerce_qu_company_f276ed_idx ON commerce_quote (company_id, status);
CREATE INDEX commerce_qu_company_ea1d14_idx ON commerce_quote (company_id, customer_id);

COMMENT ON TABLE commerce_quote IS 'Reference format: QT-{sequence:05d} per company.';

CREATE TABLE commerce_job (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at      TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id      BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    customer_id     BIGINT NOT NULL REFERENCES crm_customer (id) ON DELETE CASCADE,
    location_id     BIGINT REFERENCES crm_location (id) ON DELETE SET NULL,
    quote_id        BIGINT REFERENCES commerce_quote (id) ON DELETE SET NULL,
    sequence        INTEGER NOT NULL DEFAULT 0,
    title           VARCHAR(200) NOT NULL DEFAULT '',
    status          VARCHAR(20) NOT NULL DEFAULT 'draft',
    total           NUMERIC(12, 2) NOT NULL DEFAULT 0.00,
    scheduled_start TIMESTAMPTZ,
    scheduled_end   TIMESTAMPTZ,
    completed_at    TIMESTAMPTZ,
    CONSTRAINT uniq_job_company_sequence UNIQUE (company_id, sequence),
    CONSTRAINT commerce_job_status_check CHECK (
        status IN ('draft', 'scheduled', 'in_progress', 'completed', 'cancelled')
    ),
    CONSTRAINT commerce_job_total_check CHECK (total >= 0)
);

CREATE INDEX commerce_job_created_at_idx ON commerce_job (created_at);
CREATE INDEX commerce_job_updated_at_idx ON commerce_job (updated_at);
CREATE INDEX commerce_job_sequence_idx ON commerce_job (sequence);
CREATE INDEX commerce_job_status_idx ON commerce_job (status);
CREATE INDEX commerce_jo_company_0e70cf_idx ON commerce_job (company_id, status);
CREATE INDEX commerce_jo_company_27e329_idx ON commerce_job (company_id, customer_id);
CREATE INDEX commerce_jo_company_d26ec2_idx ON commerce_job (company_id, scheduled_start);

COMMENT ON TABLE commerce_job IS 'Reference format: JB-{sequence:05d} per company.';

CREATE TABLE commerce_invoice (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id  BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    customer_id BIGINT NOT NULL REFERENCES crm_customer (id) ON DELETE CASCADE,
    job_id      BIGINT REFERENCES commerce_job (id) ON DELETE SET NULL,
    sequence    INTEGER NOT NULL DEFAULT 0,
    title       VARCHAR(200) NOT NULL DEFAULT '',
    status      VARCHAR(20) NOT NULL DEFAULT 'draft',
    total       NUMERIC(12, 2) NOT NULL DEFAULT 0.00,
    due_date    DATE,
    paid_at     TIMESTAMPTZ,
    CONSTRAINT uniq_invoice_company_sequence UNIQUE (company_id, sequence),
    CONSTRAINT commerce_invoice_status_check CHECK (
        status IN ('draft', 'sent', 'paid', 'void')
    ),
    CONSTRAINT commerce_invoice_total_check CHECK (total >= 0)
);

CREATE INDEX commerce_invoice_created_at_idx ON commerce_invoice (created_at);
CREATE INDEX commerce_invoice_updated_at_idx ON commerce_invoice (updated_at);
CREATE INDEX commerce_invoice_sequence_idx ON commerce_invoice (sequence);
CREATE INDEX commerce_invoice_status_idx ON commerce_invoice (status);
CREATE INDEX commerce_in_company_5d1c12_idx ON commerce_invoice (company_id, status);
CREATE INDEX commerce_in_company_0e7ceb_idx ON commerce_invoice (company_id, customer_id);

COMMENT ON TABLE commerce_invoice IS 'Reference format: INV-{sequence:05d} per company.';

CREATE TABLE commerce_lineitem (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    company_id  BIGINT NOT NULL REFERENCES accounts_company (id) ON DELETE CASCADE,
    quote_id    BIGINT REFERENCES commerce_quote (id) ON DELETE CASCADE,
    job_id      BIGINT REFERENCES commerce_job (id) ON DELETE CASCADE,
    invoice_id  BIGINT REFERENCES commerce_invoice (id) ON DELETE CASCADE,
    description VARCHAR(300) NOT NULL,
    quantity    NUMERIC(10, 2) NOT NULL DEFAULT 1.00,
    unit_price  NUMERIC(12, 2) NOT NULL DEFAULT 0.00,
    sort_order  INTEGER NOT NULL DEFAULT 0,
    CONSTRAINT commerce_lineitem_quantity_check CHECK (quantity >= 0.01),
    CONSTRAINT commerce_lineitem_unit_price_check CHECK (unit_price >= 0),
    CONSTRAINT commerce_lineitem_single_parent_check CHECK (
        (quote_id IS NOT NULL)::integer
        + (job_id IS NOT NULL)::integer
        + (invoice_id IS NOT NULL)::integer = 1
    )
);

CREATE INDEX commerce_lineitem_created_at_idx ON commerce_lineitem (created_at);
CREATE INDEX commerce_lineitem_updated_at_idx ON commerce_lineitem (updated_at);
CREATE INDEX commerce_lineitem_quote_id_idx ON commerce_lineitem (quote_id);
CREATE INDEX commerce_lineitem_job_id_idx ON commerce_lineitem (job_id);
CREATE INDEX commerce_lineitem_invoice_id_idx ON commerce_lineitem (invoice_id);

COMMENT ON TABLE commerce_lineitem IS 'Exactly one parent FK set. amount = quantity * unit_price (computed in app).';

COMMIT;
